try a fix for the problem where the List of Tables is not showing in IE 7 or in IE 8 with Compability Mode
git-svn-id: https://wp-table-reloaded.googlecode.com/svn/trunk@327 335f5990-30c3-11de-96ab-f16d9912eac9

--- a/admin/admin-style.dev.css
+++ b/admin/admin-style.dev.css
@@ -197,7 +197,6 @@ div.closed .hide_link { display: none; }
 }
 
 .dataTables_wrapper {
-	position: relative;
 	clear: both;
 }
 
